test: UserServiceTest 구현